--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-carousel": "^1.0.1",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "react-slider": "^1.3.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -16,12 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -34,5 +33,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.6.0"
   }
 }
